meja/tests/records.stderr
File "tests/records.meja", line 5, characters 12-16:
Error: Unbound constructor true.
